# SAM

./: .gitignore  README.md  pyproject.toml  requirements.txt
notebooks/: 26_01_27_Initial_Tests.ipynb  26_02_03_Copying_Task.ipynb  26_02_08_Induction_Head.ipynb  26_02_09_Simplified_Task.ipynb  26_02_18_Sfm_vs_Linear.ipynb  26_03_11_Dual_Task.ipynb  26_04_05_Dual_Repolished.ipynb  SharpnessAwareMinimization_SingleIndexModel.ipynb  teacher_student_sam.ipynb  template.ipynb
scripts/: copy_task.py  dash_new.py  dash_test.py  dual_task.py  dual_task_train.py  dual_task_train_new.py  fix.py  induction_head.py  induction_optimizers.py  linear_vs_sfm.py  main.py
shell/: copy.sh  dual.sh  dual_new.sh  dual_no_parallel.sh  ind_head.sh  ind_optimizers.sh  lin_sfm.sh  parallel_launch.sh  submit.sh
src/configurations/: __init__.py  data_config.py  plot_config.py
src/dashboard/: data_manager.py  plot_generator.py
src/sam/: activations.py  config.py  dataset.py  dataset_new.py  dual_model.py  dual_model_new.py  evaluation.py  evaluation_new.py  gauss_exp.py  models.py  optimizers.py  small_models.py  utils.py
src/sam.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
